10 ( story book added )

--- a/index.html
+++ b/index.html
@@ -13,6 +13,99 @@
 
 <body>
     <div class="backdrop"></div>
+    <div id="bookArrow">
+        <p>
+            <
+        </p>
+    </div>
+    <div id="story-book">
+        <div class="pages">
+            <div class="page">
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <h1>
+                        Carte cu poezii
+                    </h1>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <ul>
+                        <li>
+                            1. Plumb
+                        </li>
+                        <li>
+                            2. Mama-ta
+                        </li>
+                        <li>
+                            3. Tata-to
+                        </li>
+                        <li>
+                            4. Frati-to
+                        </li>
+                    </ul>
+                    <p class="page-number">
+                        Cuprins
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                    </p>
+                    <p class="page-number">
+                        1
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                    </p>
+                    <p class="page-number">
+                        2
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                    </p>
+                    <p class="page-number">
+                        3
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                    </p>
+                    <p class="page-number">
+                        4
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header>
         <div class="navbar">
             <a href="./index.html" id="home">Home</a>
