11 ( definitions section added )

--- a/index.html
+++ b/index.html
@@ -152,27 +152,168 @@
         </div>
     </header>
     <main>
+        <!-- BACOVIA 🧐
+            George Bacovia (n. 17 septembrie 1881, Bacău – d. 22 mai 1957,
+București) a fost un scriitor român, format la școala simbolismului literar
+francez.
+
+Este autorul unor volume de versuri și proză scrise în baza unei tehnici
+unice în literatura română, cu vădite influențe din marii lirici moderni francezi
+pe care-i admira.
+
+La început văzut ca poet minor de critica literară, va cunoaște treptat o
+receptare favorabilă, mergând până la recunoașterea sa ca cel mai important
+poet simbolist român și unul dintre cei mai importanți poeți din poezia
+română modernă.
+
+            SIMBOLISMUL 👨‍🎓
+            Simbolismul este o paradigmă culturală, un curent literar ce se manifestă la începutul secolului al XX-lea,
+având ca punct de iradiere Franța, iar promotorul fiind Jean Moréas în articolul program Intitulat ,,Simbolismul”.
+
+Principii estetice:
+
+-respingerea parnasianismului (curent literar ce promovează virtuozitatea formală);
+
+-respingerea expresiei discursive ;
+
+-cultivarea unui nou tip de poezie bazat pe simbol, sugestie, sinestezie și corespondență ;
+
+Simbol= figură de stil ce reprezintă o idee abstractă printr-un element al lumii concrete.
+
+Sugestie= figură de stil definită ca o cale poetică de realizare a corespondențelor.
+
+-promovarea stărilor vagi, nedefinite, ambigue-cultivarea muzicalității interiorizate prin repetiție, refren și
+aliterație -promovarea inovației formale ;
+
+Teme preferate: moartea, târgul provincial( spațiu citadin), natura ca spațiu al corespondențelor și al rătăcirii,
+iubirea ca altă față a atracției spre moarte.
+
+Motive preferate: plânsul, ploaia, singurătatea, monotonia, noaptea, solitudinea, nevroza, spleenul,
+alienarea, căderea, instrumentele muzicale, culorile.
+
+!!!Simbolismul este prima formă de manifestare a modernismului.
+
+            SIMBOLISMUL ROMANESC 🟦🟨🟥
+            Are o configurație proprie marcată prin evoluția în mai multe momente
+succesive.
+
+Momentul ,,experiențelor” reprezentat de Alexandru Macedonski prin articolul
+,,Poezia viitorului” în 1881 și Dimitrie Anghel .
+
+Momentul pseudosimbolist promovat de poezia orașului de Ovid Densusianu.
+
+Momentul simbolismului exterior reprezentat de Ion Minulescu.
+
+Momentul simbolismului autentic reprezentat de George Bacovia.
+        -->
         <div class="definitions-section">
-            Definitii
+            <div class="definition">
+                <h2>
+                    George Bacovia 🧐
+                </h2>
+                <div class="texts">
+                    <p class="text">
+                        George Bacovia constituie una dintre cele mai inedite figuri ale literaturii noastre, dispunând de un talent remarcabil de a compune creații literare care devin „expresia celei mai elementare stări sufletești, e poezia cinesteziei imobile, încropite, care nu se intelectualizează, nu se raționează, nu se spiritualizează; cinestezie profund animalică; secrețiunea unui organism bolnav, după cum igrasia e lacrima zidurilor umede” (Eugen Lovinescu).       
+                    </p>
+                    <p class="text">
+                        Pasionat încă din copilărie de creație, Bacovia a intrat în universul artei, având un talent nativ atât pentru desen, cât și pentru cântatul la vioară pe care îl practica în momentele sale de relaxare. Cu toate că a fost un remarcabil violonist, poetul ia ulterior decizia de a-și valorifica într-un mod mai profund acest talent muzical impresionant, împletind poezia cu sunetele, căci „arta este ca și natura, simplă și profundă, una și diversă” (Victor Hugo).
+                    </p>
+                    <p class="text">
+                        Astfel, întreaga gamă de creații literare compusă de Bacovia este pătrunsă de o muzicalitate ieşită din comun în cadrul căreia se regăsesc o multitudine de instrumente muzicale, precum vioara, pianul, orga și fluierul: „Melodiile au avut pentru mine influență colorantă. Întâi am făcut muzică și dupa strunele vioarei am scris versuri. Fie după note, fie după urechea sufletului, acest instrument m-a însoțit cu credință, până azi. Am făcut și compoziție pentru mine” (George Bacovia).
+                    </p>
+                </div>
+            </div>
+            <div class="definition">
+                <h2>
+                    Simbolismul 👨‍🎓
+                </h2>
+                <div class="texts">
+                    <p class="text">
+                        Simbolismul constituie o paradigmă culturară, un curent literar-artistic, care se manifestă la începutul secolului al XX-lea, având ca punct de iradiere în Franța și ca promotor pe Jean Morèas în articolul-program intitulat sugestiv „Simbolismul”.      
+                    </p>
+                    <p class="text">
+                        Avându-l ca precursor pe Charles Baudelaire cu volumul de poezii „Florile răului”, precum și ca reprezentanți pe Verlaine, Rimbaud și Mallarmé, simbolismul respinge atât parnasianismul, cât și expresia discursivă, cultivă un nou tip de poezie bazat pe simbol, sugestie, poezie și corespondență și muzicalitatea interiorizată prin repetiție, refren și aliterație și promovează inovațiile formale. 
+                    </p>
+                    <p class="text">
+                        De asemenea, fiind „prima formă de manifestare a modernismului” (Hugo Friedrich), simbolismul pune accent pe starile vagi, nedefinite, ambigue și are ca teme preferate moartea, ce reprezintă supratema acestui curent literar, târgul provincial, privit ca un topos al claustrării, natura, ca spațiu al corespondențelor, dar și al rătăcirii și iubirea, care se identifică, în ciuda romantinsmului, ca o altă față a atracției spre moarte. 
+                    </p>
+                </div>
+            </div>
+            <div class="definition">
+                <h2>
+                    Simbolismul românesc 🟦🟨🟥
+                </h2>
+                <div class="texts">
+                    <p class="text">
+                        La nivel national, simbolismul dobândește o configurațue proprie marcată prin evoluția în mai multe momente succesive:
+                        <br>
+                        a)	<span>MOMENTUL EXPERIENȚELOR</span>: 	
+                        <br>
+                        * este reprezentat de Alexandru Macedonski care devine teoreticianul simbolismului românesc prin articolul intitulat „Poezia viitorului”, publicat în anul 1881;
+                        <br>
+                        * un alt reprezentant emblematic al momentului tatonărilor este Dimitrie Anghel;     
+                    </p>
+                    <p class="text">
+                        b)	<span>MOMENTUL PSEUDOSIMBOLIST</span>:
+                        <br>
+	                    * este marcat de „Poezia orașului” promovată de Ovid Densusianu;
+                    </p>
+                    <p class="text">
+                        c)	<span>MOMENTUL SIMBOLISMULUI EXTERIOR</span>:
+                        <br>
+                    	* acest moment îl are ca reprezentant pe Ion Minulescu
+                    </p>
+                    <p class="text">
+                        d)	<span>MOMENTUL SIMBOLISMULUI AUTENTIC</span>:
+                        <br>
+                    	* este reprezentat de George Bacovia, care compune o gamă impresionantă de poeme 
+                    </p>
+                </div>
+            </div>
         </div>
         <section id="section1">
             Section 1
+            <div class="wave wave1">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
 
         <section id="section2">
             Section 2
+            <div class="wave wave2">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
 
         <section id="section3">
             Section 3
+            <div class="wave wave3">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
 
         <section id="section4">
             Section 4
+            <div class="wave wave4">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
 
         <section id="section5">
             Section 5
+            <div class="wave wave5">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
     </main>
     <footer>
