--- a/index.html
+++ b/index.html
@@ -126,16 +126,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#section4" class="link">
-                        Section 4
-                    </a>
-                </li>
-                <li>
-                    <a href="#section5" class="link">
-                        Section 5
-                    </a>
-                </li>
-                <li>
                     <a href="./game.html">
                         Game
                     </a>
@@ -152,60 +142,6 @@
         </div>
     </header>
     <main>
-        <!-- BACOVIA 🧐
-            George Bacovia (n. 17 septembrie 1881, Bacău – d. 22 mai 1957,
-București) a fost un scriitor român, format la școala simbolismului literar
-francez.
-
-Este autorul unor volume de versuri și proză scrise în baza unei tehnici
-unice în literatura română, cu vădite influențe din marii lirici moderni francezi
-pe care-i admira.
-
-La început văzut ca poet minor de critica literară, va cunoaște treptat o
-receptare favorabilă, mergând până la recunoașterea sa ca cel mai important
-poet simbolist român și unul dintre cei mai importanți poeți din poezia
-română modernă.
-
-            SIMBOLISMUL 👨‍🎓
-            Simbolismul este o paradigmă culturală, un curent literar ce se manifestă la începutul secolului al XX-lea,
-având ca punct de iradiere Franța, iar promotorul fiind Jean Moréas în articolul program Intitulat ,,Simbolismul”.
-
-Principii estetice:
-
--respingerea parnasianismului (curent literar ce promovează virtuozitatea formală);
-
--respingerea expresiei discursive ;
-
--cultivarea unui nou tip de poezie bazat pe simbol, sugestie, sinestezie și corespondență ;
-
-Simbol= figură de stil ce reprezintă o idee abstractă printr-un element al lumii concrete.
-
-Sugestie= figură de stil definită ca o cale poetică de realizare a corespondențelor.
-
--promovarea stărilor vagi, nedefinite, ambigue-cultivarea muzicalității interiorizate prin repetiție, refren și
-aliterație -promovarea inovației formale ;
-
-Teme preferate: moartea, târgul provincial( spațiu citadin), natura ca spațiu al corespondențelor și al rătăcirii,
-iubirea ca altă față a atracției spre moarte.
-
-Motive preferate: plânsul, ploaia, singurătatea, monotonia, noaptea, solitudinea, nevroza, spleenul,
-alienarea, căderea, instrumentele muzicale, culorile.
-
-!!!Simbolismul este prima formă de manifestare a modernismului.
-
-            SIMBOLISMUL ROMANESC 🟦🟨🟥
-            Are o configurație proprie marcată prin evoluția în mai multe momente
-succesive.
-
-Momentul ,,experiențelor” reprezentat de Alexandru Macedonski prin articolul
-,,Poezia viitorului” în 1881 și Dimitrie Anghel .
-
-Momentul pseudosimbolist promovat de poezia orașului de Ovid Densusianu.
-
-Momentul simbolismului exterior reprezentat de Ion Minulescu.
-
-Momentul simbolismului autentic reprezentat de George Bacovia.
-        -->
         <div class="definitions-section">
             <div class="definition">
                 <h2>
@@ -297,24 +233,6 @@ Momentul simbolismului autentic reprezentat de George Bacovia.
                 </svg>
             </div>
         </section>
-
-        <section id="section4">
-            Section 4
-            <div class="wave wave4">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
-                </svg>
-            </div>
-        </section>
-
-        <section id="section5">
-            Section 5
-            <div class="wave wave5">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
-                </svg>
-            </div>
-        </section>
     </main>
     <footer>
         <p>Website made by <a href="https://www.instagram.com/__dani.web__/" target="_blank" rel="noopener">Dani</a></p>
@@ -339,6 +257,36 @@ Momentul simbolismului autentic reprezentat de George Bacovia.
             </li>
             <li>
                 Spiridon Maria
+            </li>
+        </ul>
+        <ul>
+            <li>
+                Bibliografie
+            </li>
+            <li>
+                <a href="#" target="_blank" rel="noopener">
+                    link
+                </a>
+            </li>
+            <li>
+                <a href="#" target="_blank" rel="noopener">
+                    link
+                </a>
+            </li>
+            <li>
+                <a href="#" target="_blank" rel="noopener">
+                    link
+                </a>
+            </li>
+            <li>
+                <a href="#" target="_blank" rel="noopener">
+                    link
+                </a>
+            </li>
+            <li>
+                <a href="#" target="_blank" rel="noopener">
+                    link
+                </a>
             </li>
         </ul>
     </footer>
