--- a/index.html
+++ b/index.html
@@ -35,16 +35,25 @@
                 <div class="page-content">
                     <ul>
                         <li>
-                            1. Plumb
+                            1. Unei fecioare
                         </li>
                         <li>
-                            2. Mama-ta
+                            2. Nevroză
                         </li>
                         <li>
-                            3. Tata-to
+                            3. Toamnă murind
                         </li>
                         <li>
-                            4. Frati-to
+                            4. Tu ai murit...
+                        </li>
+                        <li>
+                            5. Singur
+                        </li>
+                        <li>
+                            6. Nocturnă
+                        </li>
+                        <li>
+                            7. Miazăzi de vară
                         </li>
                     </ul>
                     <p class="page-number">
@@ -58,7 +67,25 @@
                 <span class="right-arrow"> > </span>
                 <div class="page-content">
                     <p class="page-text__content">
-                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                        <span class="page_title">Unei fecioare</span>
+                        <br>
+                        <br>
+                        Duduia vesnic citeste ;
+                        <br>
+                        Stie clavirul, picteza
+                        <br>
+                        Si nopti de-a randul vegheaza,
+                        <br>
+                        Si poate, de-aceea slabeste.
+                        <br>
+                        <br>
+                        Se crede, si unii o spun
+                        <br>
+                        Dar totul ramane secret
+                        <br>
+                        Duduia viseaza-un poet,
+                        <br>
+                        Bizar, singuratic, nebun.
                     </p>
                     <p class="page-number">
                         1
@@ -71,7 +98,43 @@
                 <span class="right-arrow"> > </span>
                 <div class="page-content">
                     <p class="page-text__content">
-                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                        <span class="page_title">Nevroză</span>
+                        <br>
+                        <br>
+                        Afară ninge prăpădind,
+                        <br>
+                        Iubita cântă la clavir, --
+                        <br>
+                        Si târgul stă întunecat,
+                        <br>
+                        De parcă ninge-n cimitir.
+                        <br>
+                        <br>
+                        Iubita cântă-un mars funebru,
+                        <br>
+                        iar eu nedumerit mă mir :
+                        <br>
+                        De ce să cânte-un mars funebru..
+                        <br>
+                        Si ninge ca-ntr-un cimitir.
+                        <br>
+                        <br>
+                        Ea plânge si-a cazut pe clape,
+                        <br>
+                        Si geme greu ca în delir..
+                        <br>
+                        În dezacord clavirul moare,
+                        <br>
+                        Si ninge ca-ntr-un cimitir.
+                        <br>
+                        <br>
+                        Si plâng si eu si tremurând
+                        <br>
+                        Pe umeri pletele-i resfir..
+                        <br>
+                        Afară târgul stă pustiu,
+                        <br>
+                        Si ninge ca-ntr-un cimitir.
                     </p>
                     <p class="page-number">
                         2
@@ -84,7 +147,29 @@
                 <span class="right-arrow"> > </span>
                 <div class="page-content">
                     <p class="page-text__content">
-                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                        <span class="page_title">Toamnă murind</span>
+                        <br>
+                        <br>
+                        Toamna în grădină îşi acordă vioara.
+                        <br>
+                        Plâng strunele jalnic, lung şi prelung
+                        <br>
+                        Şi-n goala odaie acorduri ajung..
+                        <br>
+                        Şi plâng în odaie, şi eu din vioară..
+                        <br>
+                        Plâng strunele toate lung şi prelung.
+                        <br>
+                        <br>
+                        Fereastra e deschisă.. vioarele plâng..
+                        <br>
+                        O, ninge.. şi toate se sting..
+                        <br>
+                        Palidă, toamna nervoasă, cântând a murit..
+                        <br>
+                        Îmi cade vioara şi cad ostenit,
+                        <br>
+                        Iar toamna, poetă, cântând a murit.
                     </p>
                     <p class="page-number">
                         3
@@ -94,12 +179,163 @@
 
             <div class="page">
                 <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
                 <div class="page-content">
                     <p class="page-text__content">
-                        Poezi poezie, pula mea e de hartie. <br> Sugi pula candea ca mi e somn si mi e somn
+                        <span class="page_title">Tu ai murit...</span>
+                        <br>
+                        <br>
+                        Tu ai murit in una din zilele aceste,
+                        <br>
+                        Tu, blond copil de vise, sfios si vesnic trist,
+                        <br>
+                        Dar, EA mai geme inca, te cheama, blande Crist,
+                        <br>
+                        Fecioara-n alb, departe, nu crede neagra veste...
+                        <br>
+                        <br>
+                        Vioarele in doliu, cu strunele plesnite,
+                        <br>
+                        Te cheama tremurande cu nota cea din urma,
+                        <br>
+                        Si-n van se uita-n zare si-ntreaba de-a ta urma
+                        <br>
+                        Fecioara-n alb, pe brate cu roze vestejite.
+                        <br>
+                        <br>
+                        Se duse visatorul cu fruntea intristata,
+                        <br>
+                        Si trandafirii de-acuma nu vor mai inflori,
+                        <br>
+                        Cu visurile moarte in pace va dormi...
+                        <br>
+                        Feciara-n alb muri-va pe marmura stelata...
                     </p>
                     <p class="page-number">
                         4
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        <span class="page_title">Singur</span>
+                        <br>
+                        <br>
+                        Odaia mea mă înspăimântă
+                        <br>
+                        Cu brâie negre zugrăvită -
+                        <br>
+                        Prin noapte, toamna despletită
+                        <br>
+                        În mii de fluiere cântă.
+                        <br>
+                        <br>
+                        - Odaie, plină de mistere,
+                        <br>
+                        În pacea ta e nebunie;
+                        <br>
+                        Dorm umbre negre prin unghere;
+                        <br>
+                        Pe masă arde o făclie.
+                        <br>
+                        <br>
+                        - Odaie, plină de ecouri,
+                        <br>
+                        Când plânsu-ncepe să mă prindă,
+                        <br>
+                        Stau triste negrele tablouri -
+                        <br>
+                        Făclia tremură-n oglindă.
+                        <br>
+                        <br>
+                        Odaia mea mă înspăimântă...
+                        <br>
+                        Aici n-ar sta nici o iubită, -
+                        <br>
+                        Prin noapte, toamna despletită
+                        <br>
+                        În mii de fluiere cântă.
+                    </p>
+                    <p class="page-number">
+                        5
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <span class="right-arrow"> > </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        <span class="page_title">Nocturnă</span>
+                        <br>
+                        <br>
+                        Stau... și moina cade, apă, glod...
+                        <br>
+                        Să nu mai știu nimic, ar fi un singur mod -
+                        <br>
+                        Un bec agonizează, există, nu există, -
+                        <br>
+                        Un alcoolic trece piața tristă.
+                        <br>
+                        <br>
+                        Orașul doarme ud în umezeala grea.
+                        <br>
+                        Prin zidurile astea, poate, doarme ea, -
+                        <br>
+                        Case de fier în case de zid,
+                        <br>
+                        Și porțile grele se-nchid.
+                        <br>
+                        <br>
+                        Un clavir îngână-ncet la un etaj,
+                        <br>
+                        Umbra mea stă în noroi ca un trist bagaj -
+                        <br>
+                        Stropii sar,
+                        <br>
+                        Ninge zoios,
+                        <br>
+                        La un geam, într-un pahar,
+                        <br>
+                        O roză galbenă se uită-n jos.
+                    </p>
+                    <p class="page-number">
+                        6
+                    </p>
+                </div>
+            </div>
+
+            <div class="page">
+                <span class="left-arrow"> < </span>
+                <div class="page-content">
+                    <p class="page-text__content">
+                        <span class="page_title">Miazăzi de vară</span>
+                        <br>
+                        <br>
+                        Duminica simpla, burgheza...
+                        <br>
+                        Cantec de orga stricata,
+                        <br>
+                        Ce veche balada mai plange
+                        <br>
+                        Pe-un splai, asa, dintr-o data?
+                        <br>
+                        <br>
+                        Ecou secular si tarziu...
+                        <br>
+                        Si-al zilei naduf, o ruina -
+                        <br>
+                        Sumbra balada germana
+                        <br>
+                        Pe strazi, in cetatea latina.
+                    </p>
+                    <p class="page-number">
+                        7
                     </p>
                 </div>
             </div>
@@ -209,7 +445,7 @@
         </div>
         <section id="section1">
             Section 1
-            <div class="wave wave1">
+            <div class="wave1">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
                 </svg>
@@ -218,18 +454,18 @@
 
         <section id="section2">
             Section 2
-            <div class="wave wave2">
+            <div class="wave2">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                    <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z" class="shape-fill"></path>
                 </svg>
             </div>
         </section>
 
         <section id="section3">
             Section 3
-            <div class="wave wave3">
+            <div class="wave3">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                    <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
                 </svg>
             </div>
         </section>
